# rust-restful-practice

./: Cargo.toml  README.md
src/: db.rs  handler.rs  main.rs  model.rs  response.rs
