[package]
name = "budgeting-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.9"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12"
axum = "0.7.7"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
tower-http = { version = "0.6.1", features = ["cors"] }
dotenv = "0.15.0"
rust_decimal = { version="1.17", features = ["db-postgres"]}
